--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -40,5 +40,20 @@
     "description2": "Від здоров'я людини до ветеринарної допомоги, DOVIRA пропонує широкий спектр медичних послуг, щоб задовольнити всі ваші потреби.",
     "description3": "Наша команда складається з досвідчених і ліцензованих медичних професіоналів, які надають милосердну допомогу відповідно до ваших конкретних вимог.",
     "description4": "Зв’яжіться з лікарем у будь-який час дня чи ночі та отримайте необхідну консультацію без зволікань."
+  },
+  "priorities": {
+    "title": "Спробуйте нашу веб-версію",
+    "description": "Користуйтеся всіма функціями DOVIRA прямо у своєму браузері. Завантаження не потрібні – просто відвідайте наш веб-сайт і почніть консультацію вже сьогодні!",
+    "button": "Відвідайте зараз"
+  },
+  "getStarted": {
+    "title": "Почніть сьогодні!",
+    "description": "Відчуйте зручність і спокій, які пропонує DOVIRA. Завантажте програму зараз і керуйте своїм здоров’ям лише кількома дотиками. Ваше здоров'я важливе для нас, і ми тут, щоб допомогти на кожному кроці."
+  },
+  "contact": {
+    "text": "Якщо у вас виникли запитання, будь ласка, зв’яжіться з нами через соціальні мережі та надішліть нам повідомлення."
+  },
+  "footer": {
+    "text": "© 2024 DOVIRA. Всі права захищені."
   }
 }
