minor style changes

--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -14,7 +14,7 @@
     "subtitle": "Dołącz do listy oczekujących - dowiedz się pierwszy, kiedy wystartujemy",
     "button": "Dołącz do listy",
     "comingSoon": "wkrótce",
-    "count": "500 tys.+",
+    "count": "500k+",
     "patients": "Pacjenci",
     "expertDoctors": "Lekarze eksperci",
     "expertVeterinarians": "Doświadczeni lekarze weterynarii"
